--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "alive2212/laravel-mobile-passport",
     "description": ":description",
-    "license": "license",
+    "license": "MIT",
     "authors": [
         {
             "name": "Babak Nodoust",
