--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         {
             "name": "Babak Nodoust",
             "email": "alive2212@yahoo.com",
-            "homepage": "babakn.com"
+            "homepage": "http://babakn.com"
         }
     ],
     "homepage": "https://github.com/alive2212/laravelmobilepassport",
