--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "keywords": ["Laravel", "LaravelMobilePassport"],
     "require": {
         "illuminate/support": "~5",
-        "alive2212/laravel-smart-restful": "^1.0"
+        "alive2212/laravel-smart-restful": "^1.0",
+        "laravel/passport": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~6.0",
