--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "illuminate/support": "~5",
         "alive2212/laravel-smart-restful": "^1.0",
-        "laravel/passport": "^3.0"
+        "laravel/passport": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "~6.0",
