--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "homepage": "https://github.com/alive2212/laravelmobilepassport",
     "keywords": ["Laravel", "LaravelMobilePassport"],
     "require": {
-        "peterpetrus/passport-token": "*",
+        "peterpetrus/passport-token": "^0.0",
         "illuminate/support": "~5",
         "alive2212/laravel-smart-restful": "^1.0",
         "laravel/passport": "*"
