--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "peterpetrus/passport-token": "^0.0",
         "illuminate/support": "~5",
         "alive2212/laravel-smart-restful": "^1.0",
-        "laravel/passport": "*",
+        "laravel/passport": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "~6.0",
