--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,13 @@
     "keywords": ["Laravel", "LaravelMobilePassport"],
     "require": {
         "peterpetrus/passport-token": "^0.0",
-        "illuminate/support": "~5",
-        "alive2212/laravel-smart-restful": "^1.0",
+        "illuminate/support": "^7",
+        "alive2212/laravel-smart-restful": "^3",
         "laravel/passport": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "~6.0",
-        "orchestra/testbench": "~3.0"
+        "phpunit/phpunit": "^7",
+        "orchestra/testbench": "*"
     },
     "autoload": {
         "psr-4": {
